@@ -1,4 +1,4 @@
-from eea.facetednavigation.interfaces import ICriteria
+from eea.facetednavigation.interfaces import ICriteria #pylint: disable-msg = W0611
 from zope.interface import Interface
 
 class IHeritorAccessor(Interface):
